WS-037: Stop sightings page component overlap navBar

--- a/frontend/src/components/navbar/DesktopNavbar.scss
+++ b/frontend/src/components/navbar/DesktopNavbar.scss
@@ -8,6 +8,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 100;
 
   @media (max-width: 899px) {
     display: none;
